zabbix-config.yaml
apiVersion: v1
kind: Namespace
metadata:
  creationTimestamp: null
  name: zabbix
spec: {}
status: {}
