zabbix-mysql-server.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    run: zabbix-mysql-server
  name: zabbix-mysql-server
  namespace: zabbix
spec:
  replicas: 1
  selector:
    matchLabels:
      run: mysql-server
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        run: mysql-server
    spec:
      nodeName: workernode02
      containers:
      - image: mysql:8.0
        name: mysql-server
        resources: {}
        args: ["--character-set-server=utf8", "--collation-server=utf8_bin", "--default-authentication-plugin=mysql_native_password"]
        volumeMounts:
        - name: mysql-config-volume 
          mountPath: /etc/mysql/conf.d/default_auth.cnf ## path to mount file
          subPath: default_auth
        - name: mysql-persistent-storage
          mountPath: /var/lib/mysql
      volumes:
        - name: mysql-persistent-storage
          hostPath:
            path: /k8s_volume/zabbix_mysql
            type: DirectoryOrCreate
        - name: mysql-config-volume 
          configMap:
            name: zabbix-mysql-config

status: {}
