zabbix-web-nginx-mysql.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    run: zabbix-web-nginx-mysql
  name: zabbix-web-nginx-mysql
  namespace: zabbix
spec:
  replicas: 1
  selector:
    matchLabels:
      run: zabbix-web-nginx-mysql
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        run: zabbix-web-nginx-mysql
    spec:
      containers:
      - image: zabbix/zabbix-web-nginx-mysql:latest
        name: zabbix-web-nginx-mysql
        resources: {}
status: {}
