zabbix-frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: zabbix-web-nginx-service
  name: zabbix-web-nginx-service
spec:
  ports:
  - name: 80-8080
    port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    run: zabbix-web-nginx-mysql
  type: ClusterIP
status:
  loadBalancer: {}
