zabbix-mysql-service.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: zabbix-mysql-service
  name: zabbix-mysql-service
  namespace: zabbix
spec:
  ports:
  - name: "3306"
    port: 3306
    protocol: TCP
    targetPort: 3306
  selector:
    run: mysql-server
  type: ClusterIP
status:
  loadBalancer: {}
