zabbix-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: zabbix-ingress
  namespace: zabbix
  annotations:
    kubernetes.io/ingress.class: nginx
    ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
  - host: zabbix5.oplab.co.kr
    http:
      paths:
      - path: /
        backend:
          serviceName: zabbix-web-nginx-service
          servicePort: 80
